--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ JWT_SECRET=YOUR_SECRET_KEY_HERE
 JWT_TOKEN_AUDIENCE=localhost:3000
 JWT_TOKEN_ISSUER=localhost:3000
 JWT_ACCESS_TOKEN_TTL=3600
+JWT_REFRESH_TOKEN_TTL=86400
